--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./src/assets/scss/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Telegram</title>
 </head>
 <body>
 <div class="wrapper">
-    <div class="aside">
+    <aside class="aside">
         <div class="aside-header">
             <div class="wrapper">
                 <div class="burger-icon">
@@ -21,24 +24,74 @@
                 <input class="input-search" type="text" placeholder="Search">
             </div>
         </div>
-        <div class="chat">
-            <div class="user">
-                <div class="avatar">
-                    <img src="./src/assets/img/avatar.jpg" alt="avatar">
-                </div>
-                <div class="name">John Smith</div>
-            </div>
-        </div>
-    </div>
+        <div id="chats"></div>
+    </aside>
+    <!--        <div class="aside-profile">-->
+    <!--            <div class="profile">-->
+    <!--                <div class="avatar">-->
+    <!--                    <img src="./src/assets/img/avatar.jpg" alt="avatar">-->
+    <!--                </div>-->
+    <!--                <div class="name">John</div>-->
+    <!--                <div>-->
+    <!--                    <div class="emoji-status">Set Emoji Status</div>-->
+    <!--                    <div class="icon"></div>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
     <div class="container">
-        <main class="main">
+        <main id="main">
             <div class="block">
                 <div class="border">
                     <p class="info">Select a chat to start messaging</p>
                 </div>
             </div>
         </main>
+        <div class="chat-container">
+            <div class="chat-header">
+                <div class="content">
+                    <span class="name">Bob Williams</span>
+                    <span class="time">last seen 7 minutes ago</span>
+                </div>
+                <div class="chat-icons">
+                    <div class="icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <div class="icon sidebar-icon">
+                        <img src="./src/assets/svg/sidebar.svg" alt="sidebar">
+                    </div>
+                    <div class="icon">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="chat-content">
+                <div class="chat-date">
+                    <span class="month">February</span>
+                    <span class="date">7</span>
+                </div>
+                <div>
+                    <div class="chat-row">
+                        <div class="avatar">
+                            <img src="./src/assets/img/avatar.jpg" alt="avatar">
+                        </div>
+                        <div class="message-content">
+                            <p>Hello</p>
+                            <span class="time">15:42</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="chat-footer">
+                <input class="input-message" type="text" placeholder="Write a message...">
+            </div>
+        </div>
     </div>
+
 </div>
+<script src="./src/assets/chat-component.js"></script>
+<script src="./src/assets/chat-container.js"></script>
 </body>
 </html>
