--- a/index.html
+++ b/index.html
@@ -67,19 +67,27 @@
                     </div>
                 </div>
             </div>
-            <div class="chat-content">
-                <div class="chat-date">
-                    <span class="month">February</span>
-                    <span class="date">7</span>
-                </div>
-                <div>
-                    <div class="chat-row">
-                        <div class="avatar">
-                            <img src="./src/assets/img/avatar.jpg" alt="avatar">
-                        </div>
+            <div class="chat-block">
+                <div class="chat-content">
+                    <div class="chat-date">
+                        <span class="month">February</span>
+                        <span class="date">7</span>
+                    </div>
+                    <div class="message-block">
                         <div class="message-content">
-                            <p>Hello</p>
-                            <span class="time">15:42</span>
+                            <div class="avatar">
+                                <img src="./src/assets/img/avatar.jpg" alt="avatar">
+                            </div>
+                            <div class="message-group">
+                                <div class="message">
+                                    <p>Hello</p>
+                                    <span class="time">15:42</span>
+                                </div>
+                                <div class="message">
+                                    <p>Hello</p>
+                                    <span class="time">15:42</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -89,7 +97,6 @@
             </div>
         </div>
     </div>
-
 </div>
 <script src="./src/assets/chat-component.js"></script>
 <script src="./src/assets/chat-container.js"></script>
